--- a/Document.Rmd
+++ b/Document.Rmd
@@ -2,29 +2,205 @@
 title: "Twin and Family Strutural Equation Models in R & Lavaan"
 author: "Michel G Nivard"
 date: "6/21/2021"
-output: html_document
+output: 
+  pdf_document:
+    toc: true
+    toc_depth: 4
+    number_sections: true
+bibliography: references.bib
 ---
 
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo = TRUE)
 ```
 
-## R Markdown
+# Introduction
 
-This is an R Markdown document. Markdown is a simple formatting syntax for authoring HTML, PDF, and MS Word documents. For more details on using R Markdown see <http://rmarkdown.rstudio.com>.
+This document describes various twin structural equation models (SEM) to estimate the nature of the relationship between family members in order to learn about the contribution of genes and the social or rearing environment to complex (behavioral) outcomes. The goal is to provide a basic understands of these models with the means to fit the models in lavaan [@rosseel2012], lavaan is an R package that allow the use to define a structural equation model in terms of regression, variances and covariances and will be familiar to users of M-Plus. The package is (IMO) more accessible to beginners then another excellent SEM R package: OpenMx [@neale2015], but the accessibility comes at the cost of less flexibility, In terms of flexibility OpenMX is truely unrivaled. Its worth pointing out that the developers behind OpenMx have an academic interest in twin models, which means scripts and support for users in those models is often especially excellent.
 
-When you click the **Knit** button a document will be generated that includes both content as well as the output of any embedded R code chunks within the document. You can embed an R code chunk like this:
+# Lavaan
 
-```{r cars}
-summary(cars)
+Lavaan requires the user to specify 
+
+# Twin Models & Family models
+
+There is a long history of questioning the nature of the resemblance between family members, specifically sibling and even more specifically twins. Reasons that are commonly put forward for these similarities are the obvious genetic similarity, similarity in socio-economic position and similarity in upbringing shared between siblings. Twin and family models leverage variation in genetic and environmental relatedness between family members to estimate the relative contributions of genetics, the environment, their interacting, their correlation and other process to the similarities between relatives. Twins offer an excellent "natural experiment" where some twins are genetically identical (identical, or monozygotic twins or MZ twins or MZs) and some twins share halve their segregating DNA (fraternal, or dizygotic twins, DZ twins or DZs). Like any natural experiment it comes with various assumptions some of which are specific to twin models, and I'll make sure to catalog the assumptions we are making along the way.
+
+# Quickly set up my R environment
+
+```{r set up packages}
+library(lavaan)
+library(MASS)
+library(tidySEM)
+library(ggplot2)
 ```
 
-## Including Plots
+# Univariate Twin model
 
-You can also embed plots, for example:
 
-```{r pressure, echo=FALSE}
-plot(pressure)
+### A Common environment
+
+Lets simulate same data where the resemblance between twins is a function of equal parts (33.3%/33.3%/33.4%) additive genetic variance (A), common environmental influences(C) (can be rearing, can be societal influences can be governmental policies), and environment unique to each of the individual twins (E) (can beprivate friends, being in separate classrooms, but also measurement error).
+
+```{r ACE}
+A <- matrix(1,2,2) # genetic correlation for MZ's = 1
+C <- matrix(1,2,2)
+E <- diag(2)
+Adz <- matrix(c(1,.5,.5,1),2,2) # genetic correlation for DZ's = 0.5
+
+# make 1000 pairs of MZ twins 
+MZ <- mvrnorm(1000,mu=c(0,0),Sigma = A+C+E)
+
+# Add a column to label as MZ:
+MZ<- cbind.data.frame("MZ",MZ)
+colnames(MZ) <- c("zyg","P1", "P2") 
+
+
+# make 1500 DZ twin pairs
+DZ <- mvrnorm(1500,mu=c(0,0),Sigma = Adz+C+E)
+
+# add variable too label as DZ:
+DZ <- cbind.data.frame("DZ",DZ)
+colnames(DZ) <- c("zyg","P1", "P2")
+
+# Combine MZ and DZ twins
+dataset <- rbind(MZ,DZ)
 ```
 
-Note that the `echo = FALSE` parameter was added to the code chunk to prevent printing of the R code that generated the plot.
+We then define the lavaan model that can express the variance in the trait P explained by latent variables A, C and E:
+
+```{r lavaan ACE}
+ace.model<-"
+A1=~ NA*P1 + c(a,a)*P1 
+A2=~ NA*P2 + c(a,a)*P2 
+C1 =~ NA*P1 + c(c,c)*P1
+C2 =~ NA*P2 + c(c,c)*P2
+# variances
+A1 ~~ 1*A1
+A2 ~~ 1*A2
+C1 ~~ 1*C1
+C2 ~~ 1*C2 
+P1~~c(e2,e2)*P1 
+P2~~c(e2,e2)*P2
+# covariances
+A1 ~~ c(1,.5)*A2 
+A1 ~~ 0*C1 + 0*C2 
+A2 ~~ 0*C1 + 0*C2 
+C1 ~~ c(1,1)*C2"
+```
+
+Lets look at some of the critical lines of code in the model:
+
+```A1=~ NA*P1 + c(a,a)*P1``` Here we create the latent variable A1, the phenotype P for twin 1 (P1) loads ion this variable, and in both groups (groups being MZ and DZ twins) the influence of this latent variable on the outcome is the same (contained using `c(a,a)` ). Similar code is used to defien the latent variables C1 and C2. Now the effect of genes on an outcome is assumed the same for everyone regardless of whether they are twins, or not, the resemblance between twin 1 and twin 2 difference for MZ and DZ twins. We define/fix the resemblance later in the model here: `A1 ~~ c(1,.5)*A2 `, because A1 and A2 are variance 1: `A1 ~~ 1*A1` and `A2 ~~ 1*A2` the constrained implies a correlation of 1 for the MZ twins and a correlation of 0.5 for the DZ twins.  The common environment is correlated 1 regardless of twin status: `C1 ~~ c(1,1)*C2`, while the unshared environment E is conceptualized as a residual variance of the trait P (P1 or P2 respectively): `P1~~c(e2,e2)*P1`
+
+We assume the latent variables A(1/2) and C(1/2) are uncorrelated, and fix their covariance to 0:
+
+```{r}
+A1 ~~ 0*C1 + 0*C2 
+A2 ~~ 0*C1 + 0*C2
+``` 
+
+We also assume the residual variance (E) is uncorrelated to A and C, but fortunately for us this is a lavaan default. We proceed to fit the model to the simulated data:
+
+```{r fit ACE}
+# Standard ace model:
+ace.fit<-cfa(ace.model, data = dataset,group = "zyg")
+summary(ace.fit)
+```
+
+
+
+### Non-additive genetic variance
+
+Lets simulate same data where the resemblance between twins is a function of equal parts (33.3%/33.3%/33.4%) additive genetic variance (A), non additive genetic effects (D) (can be geneXgene interactino, can be dominant inheritance where a single allele is enough to express the trait regardless of the state of the other allele), and environment unique to each of the individual twins (E) (can private friends, being in separate classrooms, but also measurement error).
+
+```{r ADE}
+A <- matrix(1,2,2) # genetic correlation for MZ's = 1
+D <- matrix(1,2,2)
+E <- diag(2)
+Adz <- matrix(c(1,.5,.5,1),2,2) # additive genetic correlation for DZ's = 0.5
+Ddz <- matrix(c(1,.25,.25,1),2,2)  # non-additive genetic correlation for DZ's = 0.5
+
+# make 1000 pairs of MZ twins 
+MZ <- mvrnorm(1000,mu=c(0,0),Sigma = A+D+E)
+
+# Add a column to label as MZ:
+MZ<- cbind.data.frame("MZ",MZ)
+colnames(MZ) <- c("zyg","P1", "P2") 
+
+
+# make 1500 DZ twin pairs
+DZ <- mvrnorm(1500,mu=c(0,0),Sigma = Adz+Ddz+E)
+
+# add variable too label as DZ:
+DZ <- cbind.data.frame("DZ",DZ)
+colnames(DZ) <- c("zyg","P1", "P2")
+
+# Combine MZ and DZ twins
+dataset <- rbind(MZ,DZ)
+```
+
+We then define the lavaan model that can express the variance in the trait P explained by latent variables A, C and E:
+
+```{r lavaan ADE}
+ade.model<-"
+A1=~ NA*P1 + c(a,a)*P1 
+A2=~ NA*P2 + c(a,a)*P2 
+D1 =~ NA*P1 + c(d,d)*P1
+D2 =~ NA*P2 + c(d,d)*P2
+# variances
+A1 ~~ 1*A1
+A2 ~~ 1*A2
+D1 ~~ 1*D1
+D2 ~~ 1*D2 
+P1~~c(e2,e2)*P1 
+P2~~c(e2,e2)*P2
+# covariances
+A1 ~~ c(1,.5)*A2 
+A1 ~~ 0*D1 + 0*D2 
+A2 ~~ 0*D1 + 0*D2 
+D1 ~~ c(1,.25)*D2"
+```
+
+Lets look at some of the critical lines of code in the model:
+
+```A1=~ NA*P1 + c(a,a)*P1``` Here we create the latent variable A1, the phenotype P for twin 1 (P1) loads on this variable, and in both groups (groups being MZ and DZ twins) the influence of this latent variable on the outcome is the same (contained using `c(a,a)` ). Similar code is used to define the latent variables D1 and D2. Now the effect of genes on an outcome is assumed the same for everyone regardless of whether they are twins, or not, the resemblance between twin 1 and twin 2 difference for MZ and DZ twins. We define/fix the resemblance later in the model here: `A1 ~~ c(1,.5)*A2 `, because A1 and A2 are variance 1: `A1 ~~ 1*A1` and `A2 ~~ 1*A2` the constrained implies a correlation of 1 for the MZ twins and a correlation of 0.5 for the DZ twins.  The non-additive genetic effects are correlated 1 for MZ twins and .25 for DZ twins `C1 ~~ c(1,.25)*C2`, while the unshared environment E is conceptualized as a residual variance of the trait P (P1 or P2 respectively): `P1~~c(e2,e2)*P1`
+
+We assume the latent variables A(1/2) and D(1/2) are uncorrelated, and fix their covariance to 0:
+
+```{r}
+A1 ~~ 0*D1 + 0*D2 
+A2 ~~ 0*D1 + 0*D2
+``` 
+
+
+We also assume the residual variance (E) is uncorrelated to A and D, but fortunately for us this is a lavaan default.We proceed to fit the model to the simulated data:
+
+```{r fit ADE}
+# Standard ace model:
+ade.fit<-cfa(ade.model, data = dataset,group = "zyg")
+summary(ade.fit)
+```
+
+
+### Sex specific effects
+
+### Binary/Ordinal data
+
+## Gene environment interaction
+
+## Gene-enviornment correlation (model requires a PRS)
+
+## Sibling interactions & Rater (contrast) effects
+
+# Multivariate models
+
+## A bivariate twin model
+
+## Direction of Causation models
+
+### Variatiomns on Direction of Causation models
+
+## Rater bias models
+
+# References
