--- a/references.bib
+++ b/references.bib
@@ -26,3 +26,76 @@
 	url = {http://dx.doi.org/10.1007/s11336-014-9435-8},
 	langid = {en}
 }
+
+@article{merkle2018,
+	title = {blavaan: Bayesian Structural Equation Models via Parameter Expansion},
+	author = {{Merkle}, {Edgar C.} and {Rosseel}, {Yves}},
+	year = {2018},
+	date = {2018},
+	journal = {Journal of Statistical Software},
+	volume = {85},
+	number = {4},
+	doi = {10.18637/jss.v085.i04},
+	url = {http://dx.doi.org/10.18637/jss.v085.i04},
+	langid = {en}
+}
+
+@article{jacobucci2016,
+	title = {Regularized Structural Equation Modeling},
+	author = {{Jacobucci}, {Ross} and {Grimm}, {Kevin J.} and {McArdle}, {John J.}},
+	year = {2016},
+	month = {04},
+	date = {2016-04-12},
+	journal = {Structural Equation Modeling: A Multidisciplinary Journal},
+	pages = {555--566},
+	volume = {23},
+	number = {4},
+	doi = {10.1080/10705511.2016.1154793},
+	url = {http://dx.doi.org/10.1080/10705511.2016.1154793},
+	langid = {en}
+}
+
+@article{Purcell2002,
+	title = {Variance Components Models for Gene{\textendash}Environment Interaction in Twin Analysis},
+	author = {{Purcell}, {Shaun}},
+	year = {2002},
+	month = {12},
+	date = {2002-12-01},
+	journal = {Twin Research},
+	pages = {554--571},
+	volume = {5},
+	number = {6},
+	doi = {10.1375/136905202762342026},
+	url = {http://dx.doi.org/10.1375/136905202762342026},
+	langid = {en}
+}
+
+@article{huang2017,
+	title = {A Penalized Likelihood Method for Structural Equation Modeling},
+	author = {{Huang}, {Po-Hsien} and {Chen}, {Hung} and {Weng}, {Li-Jen}},
+	year = {2017},
+	month = {04},
+	date = {2017-04-17},
+	journal = {Psychometrika},
+	pages = {329--354},
+	volume = {82},
+	number = {2},
+	doi = {10.1007/s11336-017-9566-9},
+	url = {http://dx.doi.org/10.1007/s11336-017-9566-9},
+	langid = {en}
+}
+
+@article{bates2019,
+	title = {umx: Twin and Path-Based Structural Equation Modeling in R},
+	author = {{Bates}, {Timothy C.} and {Maes}, {Hermine} and {Neale}, {Michael C.}},
+	year = {2019},
+	month = {02},
+	date = {2019-02},
+	journal = {Twin Research and Human Genetics},
+	pages = {27--41},
+	volume = {22},
+	number = {1},
+	doi = {10.1017/thg.2019.2},
+	url = {http://dx.doi.org/10.1017/thg.2019.2},
+	langid = {en}
+}
